lexer_parser/src/test/exempleFile/miniJaja/success/lengthArray.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du length	*/
/************************/

class lengthArray {

	main {
        int x[5];
        int z = length(x);

	}
}
