lexer_parser/src/test/exempleFile/miniJaja/fail/lengthNumber.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du length	*/
/************************/

class lengthArray {

	main {
        int e = length(5);
        int z = length(56*8+2/7);

	}
}
